--- a/application.css
+++ b/application.css
@@ -41,7 +41,7 @@ body {
 
 .credential-index {
   position: fixed;
-  height: 100%;
+  height: 90%;
   width: 300px;
   overflow-y: scroll;
   left: 200px;
@@ -49,6 +49,7 @@ body {
 }
 
 .index-item {
+  position: relative;
   padding: 10px;
   color: #4a4a4a;
   border-bottom: 1px solid lightgrey;
@@ -69,5 +70,16 @@ body {
 }
 
 .arrow {
-  
+  position: absolute;
+  right: 10px;
+  top: 25px;
+  color: grey;
+}
+
+.credential-detail {
+  position: fixed;
+  border: solid black 1px;
+  left: 502px;
+  height: 100%;
+  padding: 40px;
 }
