--- a/application.css
+++ b/application.css
@@ -60,13 +60,35 @@ body {
   cursor: pointer;
 }
 
-.index-item p {
+.index-header {
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+}
+
+.index-username {
   font-size: 12px;
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.index-tag {
+  background-color: #9b9b9b;
+  color: white;
+  padding: 3px;
+  border-radius: 4px;
+  margin-left: 7px;
+  font-size: 10px;
+}
+
+.index-favicon {
+  width: 15px;
+  margin-right: 10px;
 }
 
 .index-title {
   margin: 0;
-  padding-bottom: 10px;
 }
 
 .arrow {
@@ -78,8 +100,41 @@ body {
 
 .credential-detail {
   position: fixed;
-  border: solid black 1px;
+  border: 1px solid lightgrey;
   left: 502px;
   height: 100%;
+  width: 80%;
   padding: 40px;
+}
+
+.detail-section {
+  width: 300px;
+  margin-top: 30px;
+  font-size: 12px;
+}
+
+.detail-section-header {
+  border-bottom: 2px solid lightgrey;
+  font-weight: bold;
+  color: #4a4a4a;
+  padding-bottom: 5px;
+}
+
+.detail-section form {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  color: grey;
+}
+
+.form-label input {
+  color: #4a4a4a;
+  font-size: 14px;
+  margin-top: 2px;
 }
