--- a/application.css
+++ b/application.css
@@ -149,6 +149,23 @@ body {
   margin-top: 2px;
 }
 
+.sharing-form input {
+  border: 1px solid lightgrey;
+  padding: 10px;
+  border-radius: 3px;
+  margin: 5px 0 12px;
+  font-size: 14px;
+}
+.sharing-form input[type="submit"] {
+  background-color: #dbdbdb;
+  width: 100px;
+  text-align: center;
+}
+
+.sharing-form input[type="submit"]:hover {
+  cursor: pointer;
+}
+
 .delete-button {
   background-color: #9b9b9b;
   border-radius: 7px;
@@ -161,4 +178,20 @@ body {
 
 .delete-button:hover {
   cursor: pointer;
+}
+
+.borrower {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  padding: 15px 0;
+  border-bottom: 1px solid lightgrey;
+  color: #4a4a4a;
+  margin-bottom: 10px;
+}
+
+.borrower i {
+  font-size: 25px;
+  margin-right: 10px;
+  color: gray;
 }
